@startuml class_diagram
' Style commun — diagrammes ElevConnect
' SVG : format vectoriel net à toute taille. PNG : export haute définition.
skinparam backgroundColor #FFFFFF
skinparam dpi 180
skinparam shadowing false
skinparam roundcorner 12
skinparam linetype ortho
skinparam defaultFontName SansSerif
skinparam defaultFontSize 14
skinparam TitleFontName SansSerif
skinparam TitleFontSize 20
skinparam TitleFontColor #17324D
skinparam ArrowColor #456A7D
skinparam ArrowFontColor #29485B
skinparam ArrowThickness 1.4
skinparam NoteBackgroundColor #FFF8E8
skinparam NoteBorderColor #E5AE45
skinparam NoteFontColor #5B481E
skinparam PackageBorderColor #9AB7A7
skinparam PackageBackgroundColor #F4FAF6
skinparam PackageFontColor #1F5B43
skinparam PackageFontStyle bold
skinparam ActivityBackgroundColor #F0F8F3
skinparam ActivityBorderColor #2F7D5B
skinparam ActivityFontColor #17324D
skinparam ActivityDiamondBackgroundColor #FFF3D8
skinparam ActivityDiamondBorderColor #D8952F
skinparam ActivityBarColor #2F7D5B
skinparam ClassBackgroundColor #FFFFFF
skinparam ClassBorderColor #2F7D5B
skinparam ClassHeaderBackgroundColor #E4F3EA
skinparam ClassFontColor #17324D
skinparam EntityBackgroundColor #FFFFFF
skinparam EntityBorderColor #2F7D5B
skinparam EntityFontColor #17324D
skinparam StateBackgroundColor #EDF7F1
skinparam StateBorderColor #2F7D5B
skinparam StateFontColor #17324D
skinparam UsecaseBackgroundColor #EAF4F8
skinparam UsecaseBorderColor #3E7490
skinparam UsecaseFontColor #17324D
skinparam SequenceLifeLineBorderColor #9CB4C1
skinparam SequenceLifeLineBackgroundColor #FFFFFF
skinparam SequenceParticipantBackgroundColor #EAF4F8
skinparam SequenceParticipantBorderColor #3E7490
skinparam SequenceActorBackgroundColor #FFFFFF
skinparam SequenceActorBorderColor #2F7D5B
skinparam SequenceGroupBackgroundColor #F7FBFD
skinparam SequenceGroupBorderColor #9CB4C1

left to right direction
hide empty members
skinparam classAttributeIconSize 0
title Modèle métier d'ElevConnect 

class Utilisateur {
  id
  nom
  email
  role
}
class Annonce {
  id
  type
  prixUnitaire
  quantite
  statut
}
class ReductionAnnonce {
  quantiteMin
  pourcentage
}
class Commande {
  id
  quantite
  montantNet
  modeRetrait
  statut
}
class Paiement {
  total
  moyen
  statut
}
class Livraison {
  statut
  codeQR
  verification
}
class Versement {
  montant
  beneficiaire
  statut
}
class ServiceVeterinaire {
  titre
  prix
}
class RendezVous {
  datePrevue
  statut
}
class Notification {
  contenu
  lue
}

Utilisateur "1" --> "0..*" Annonce : publie\n[fournisseur]
Annonce "1" *-- "0..*" ReductionAnnonce : propose
Utilisateur "1" --> "0..*" Commande : passe\n[acheteur]
Annonce "1" --> "0..*" Commande : concerne
Commande "1" *-- "0..1" Paiement : règle
Commande "1" *-- "0..1" Livraison : livre\n[optionnel]
Utilisateur "0..1" --> "0..*" Livraison : assure\n[livreur]
Paiement "1" --> "1..*" Versement : déclenche
Utilisateur "1" --> "0..*" ServiceVeterinaire : propose\n[vétérinaire]
ServiceVeterinaire "1" --> "0..*" RendezVous : concerne
Utilisateur "1" --> "0..*" RendezVous : demande\n[éleveur]
Utilisateur "1" --> "0..*" Notification : reçoit

note bottom of Utilisateur
  Rôles : acheteur, éleveur, vendeur, vétérinaire,
  livreur ou administrateur.
end note
note bottom of Livraison
  Créée seulement si l'acheteur choisit
  une livraison plutôt qu'un retrait direct.
end note
@enduml
